Bug 507877 - Color adjustment filter channel selector should say "RGB" instead of "RGBA"
Summary: Color adjustment filter channel selector should say "RGB" instead of "RGBA"
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 5.2.11
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-05 00:56 UTC by Noel Santos
Modified: 2025-12-17 11:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Santos 2025-08-05 00:56:36 UTC
The color adjustment filter has a "channel" selector where the default option is "RGBA," but while this option is selected the alpha channel isn't processed by the filter. It should say "RGB" instead.
Comment 1 Vitamorus 2025-09-20 14:06:20 UTC
Hi Noel, thanks for your report

To be hyper-specific: this is about the "Color Adjustment curves" filter. I cannot personally attest to which is more correct (RGB vs RGBA), but it sure does seem like the alpha channel is unaffected and that RGB is a more accurate label. Should be an easy fix in that case.
Comment 2 Bug Janitor Service 2025-12-17 10:47:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/2573
Comment 3 wolthera 2025-12-17 11:03:42 UTC
Git commit 231d117c5a2f843db9393d555f7be3381767cb21 by Wolthera van Hövell tot Westerflier.
Committed on 17/12/2025 at 10:34.
Pushed by woltherav into branch 'master'.

Make the all-colors channel in the adjustment filter not contain "A".

We don't seem to have a generic function to only get the names of the color channels,
or even a way to find canonical short names for color channels, so hardcoding them
for now makes the most sense.

M  +15   -2    plugins/filters/colorsfilters/virtual_channel_info.cpp

https://invent.kde.org/graphics/krita/-/commit/231d117c5a2f843db9393d555f7be3381767cb21