Make the all-colors channel in the adjustment filter not contain "A".

We don't seem to have a generic function to only get the names of the color channels,
or even a way to find canonical short names for color channels, so hardcoding them
for now makes the most sense.

BUG:507877